--- a/index.html
+++ b/index.html
@@ -174,6 +174,33 @@
       font-size: 1.4rem;
       color: rgba(0, 0, 0, 0.75);
     }
+
+    @media (max-width: 768px) {
+  nav.glass-nav {
+    flex-direction: row !important; /* Force horizontal layout */
+    flex-wrap: nowrap;
+    overflow-x: auto; /* Allow horizontal scrolling if needed */
+    justify-content: flex-start;
+    gap: 16px;
+    padding: 10px 16px;
+    max-width: 100vw;
+    border-radius: 100px;
+  }
+
+  .nav-link {
+    flex: 0 0 auto; /* Prevent shrinking */
+    font-size: 1rem;
+    padding: 6px 12px;
+  }
+
+  .nav-indicator {
+    height: 32px;
+    width: 60px;
+    top: 50%;
+    transform: translateY(-50%);
+  }
+}
+
   </style>
 </head>
 <body>
