Fix welcome bubble centering for mobile

--- a/index.html
+++ b/index.html
@@ -201,6 +201,22 @@
   }
 }
 
+@media (max-width: 600px) {
+  .water-drop {
+    width: 90%;
+    padding: 40px 20px;
+    margin: 40px auto 0 auto;
+  }
+
+  .water-drop h1 {
+    font-size: 2.2rem;
+  }
+
+  .water-drop p {
+    font-size: 1.2rem;
+  }
+}
+
   </style>
 </head>
 <body>
