--- a/index.html
+++ b/index.html
@@ -285,6 +285,22 @@
   pointer-events: auto;
 }
 
+#about .about-text {
+  padding: 30px 20px;
+  margin: 40px auto;
+  max-width: 90%;
+  border-radius: 40px;
+}
+
+#about .about-text h1 {
+  font-size: 2rem;
+  line-height: 1.3;
+}
+
+#about .about-text p {
+  font-size: 1.1rem;
+  line-height: 1.6;
+}
 
   </style>
 </head>
