--- a/index.html
+++ b/index.html
@@ -302,6 +302,117 @@
   line-height: 1.6;
 }
 
+.projects-container {
+  width: 100%;
+  max-width: 1000px;
+  margin: 20px auto 0 auto; /* Reduced top margin */
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+  align-items: center;
+}
+
+.project-card {
+  width: 100%;
+  max-width: 800px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  background: rgba(255, 255, 255, 0.08);
+  border-radius: 40px;
+  padding: 2rem;
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  box-shadow:
+    inset 0 1px 2px rgba(255, 255, 255, 0.1),
+    0 6px 16px rgba(0, 0, 0, 0.05);
+  backdrop-filter: blur(6px);
+}
+
+
+.project-card.reverse {
+  flex-direction: row-reverse;
+}
+
+.project-info {
+  flex: 1 1 300px;
+}
+
+.project-info h2 {
+  font-size: 2rem;
+  margin-bottom: 1rem;
+  color: rgba(0, 0, 0, 0.85);
+}
+
+.project-info p {
+  font-size: 1.1rem;
+  margin-bottom: 1.5rem;
+  color: rgba(0, 0, 0, 0.7);
+}
+
+.project-btn {
+  text-decoration: none;
+  background: rgba(255, 255, 255, 0.12);
+  padding: 0.6rem 1.4rem;
+  border-radius: 30px;
+  color: #000;
+  font-weight: 500;
+  border: 1px solid rgba(255, 255, 255, 0.25);
+  transition: background 0.2s ease;
+}
+
+.project-btn:hover {
+  background: rgba(255, 255, 255, 0.2);
+}
+
+.project-logo {
+  flex: 1 1 260px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 12px;
+}
+
+.project-logo img {
+  width: 240px;
+  max-width: 100%;
+  height: auto;
+  border-radius: 24px;
+  transition: transform 0.3s ease;
+  background: none;
+  padding: 0;
+  backdrop-filter: none;
+  box-shadow: none;
+}
+
+
+
+/* Responsive layout */
+@media (max-width: 768px) {
+  .projects-container {
+    padding: 1.5rem;
+  }
+
+  .project-card {
+    flex-direction: column !important;
+    text-align: center;
+    gap: 1.5rem;
+  }
+
+  .project-logo {
+    order: -1;
+  }
+
+  .project-info h2 {
+    font-size: 1.5rem;
+  }
+
+  .project-info p {
+    font-size: 1rem;
+  }
+}
+
   </style>
 </head>
 <body>
@@ -453,7 +564,30 @@
     </section>
     <section id="projects">
       <div class="projects-container">
-        <!-- Existing project cards -->
+<!-- Sindesi Card -->
+<div class="project-card">
+  <div class="project-info">
+    <h2>Sindesi</h2>
+    <p>An innovative social app redefining meaningful online connections through shared context and presence.</p>
+    <a href="https://sindesi.ch" class="project-btn" target="_blank">Visit Now</a>
+  </div>
+  <div class="project-logo">
+    <img src="link-logo.png" alt="Sindesi Logo">
+  </div>
+</div>
+
+<!-- Beskou Card -->
+<div class="project-card reverse">
+  <div class="project-info">
+    <h2>Beskou</h2>
+    <p>A new era of accessibility tools — simply. powerfully.</p>
+    <a href="https://beskou.com" class="project-btn" target="_blank">Visit Now</a>
+  </div>
+  <div class="project-logo">
+    <img src="beskou-logo.png" alt="Beskou Logo">
+  </div>
+</div>
+
       </div>
     </section>
   </main>
