Fix Steve Jobs logo sizing in projects section

--- a/index.html
+++ b/index.html
@@ -375,16 +375,19 @@
 }
 
 .project-logo img {
-  width: 240px;
-  max-width: 100%;
-  height: auto;
-  border-radius: 24px;
+  width: 160px;
+  max-width: auto;
+  height: 160;
+  border-radius: 15px;
   transition: transform 0.3s ease;
+  object-fit: contain;
   background: none;
   padding: 0;
   backdrop-filter: none;
   box-shadow: none;
+
 }
+
 
 
 
@@ -585,6 +588,18 @@
   </div>
   <div class="project-logo">
     <img src="beskou-logo.png" alt="Beskou Logo">
+  </div>
+</div>
+
+<!-- Steve Card -->
+<div class="project-card">
+  <div class="project-info">
+    <h2>Steve Jobs</h2>
+    <p>A tribute to my hero, my inspiration</p>
+    <a href="https://stevejobs.ch" class="project-btn" target="_blank">Visit Now</a>
+  </div>
+  <div class="project-logo">
+    <img src="sj.png" alt="Steve Logo">
   </div>
 </div>
 
