--- a/index.html
+++ b/index.html
@@ -19,18 +19,19 @@
       overflow-x: hidden;
       background: transparent;
     }
-    body::before {
-      content: '';
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: url('sky1.jpg') no-repeat center center;
-      background-size: cover;
-      z-index: -1;
-      pointer-events: none;
-    }
+
+    #background-video {
+  position: fixed;
+  top: 0;
+  left: 0;
+  min-width: 100vw;
+  min-height: 100vh;
+  object-fit: cover;
+  z-index: -1;
+  pointer-events: none;
+}
+
+
     nav.glass-nav {
       position: fixed;
       top: 40px;
@@ -419,6 +420,13 @@
   </style>
 </head>
 <body>
+
+  <video autoplay muted loop playsinline id="background-video" poster="sky1.jpg">
+  <source src="clouds.mp4" type="video/mp4" />
+  Your browser does not support the video tag.
+</video>
+
+
   <nav class="glass-nav">
     <div class="nav-indicator"></div>
     <a href="#" class="nav-link active" data-target="home">Hey!</a>
