Add mobile fallback for background video

--- a/index.html
+++ b/index.html
@@ -256,6 +256,18 @@
       }
     }
 
+    @media (max-width: 768px) {
+  #background-video {
+    display: none;
+  }
+
+  body {
+    background: url('sky1.jpg') no-repeat center center;
+    background-size: cover;
+  }
+}
+
+
     #photo-overlay {
   position: fixed;
   top: 0;
