--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       padding: 0;
       box-sizing: border-box;
     }
+
     html, body {
       height: 100%;
       font-family: 'Inter', sans-serif;
@@ -20,16 +21,10 @@
       background: transparent;
     }
 
-    #background-video {
-  position: fixed;
-  top: 0;
-  left: 0;
-  min-width: 100vw;
-  min-height: 100vh;
-  object-fit: cover;
-  z-index: -1;
-  pointer-events: none;
-}
+    body {
+      background: url('sky1.jpg') no-repeat center center;
+      background-size: cover;
+    }
 
 
     nav.glass-nav {
@@ -45,9 +40,9 @@
       border: 1px solid rgba(255, 255, 255, 0.3);
       border-radius: 100px;
       box-shadow: inset 0 2px 6px rgba(255, 255, 255, 0.1), inset 0 -2px 4px rgba(0, 0, 0, 0.05), 0 10px 20px rgba(0, 0, 0, 0.05);
-      backdrop-filter: blur(6px);
       z-index: 10;
     }
+
     .nav-link {
       text-decoration: none;
       color: rgba(0, 0, 0, 0.75);
@@ -57,12 +52,12 @@
       padding: 4px 12px;
       transition: color 0.2s ease;
     }
-    .nav-link:hover {
-      color: rgba(0, 0, 0, 1);
-    }
+
+    .nav-link:hover,
     .nav-link.active {
       color: rgba(0, 0, 0, 1);
     }
+
     .nav-indicator {
       position: absolute;
       top: 50%;
@@ -75,6 +70,7 @@
       border-radius: 100px;
       transition: all 0.6s cubic-bezier(0.6, 0, 0.4, 1);
     }
+
     .nav-indicator.shrink {
       width: 20px !important;
       border-radius: 50% !important;
@@ -142,23 +138,51 @@
       gap: 2rem;
       padding: 2rem 0;
     }
+.card {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: rgba(255, 255, 255, 0.05);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 40px; /* Less pill-like */
+  padding: 50px 40px;
+  text-align: center;
+  box-shadow:
+    inset 0 5px 12px rgba(255, 255, 255, 0.15),
+    inset 0 -5px 10px rgba(0, 0, 0, 0.1),
+    0 20px 40px rgba(0, 0, 0, 0.08);
+  backdrop-filter: blur(6px);
+  background-clip: padding-box;
+  width: 100%;
+  max-width: 800px; /* Give more room for the photos */
+  margin: auto;
+}
 
-    .card {
-      background: rgba(255, 255, 255, 0.08);
-      border: 1px solid rgba(255, 255, 255, 0.2);
-      border-radius: 24px;
-      padding: 1rem;
-      box-shadow: inset 0 1px 2px rgba(255, 255, 255, 0.1), 0 6px 12px rgba(0, 0, 0, 0.05);
-      backdrop-filter: blur(4px);
-      position: relative; /* ensure stacking context exists */
-      z-index: 1;
+
+
+    .card::before {
+      content: '';
+      position: absolute;
+      top: 10%;
+      left: 10%;
+      width: 60%;
+      height: 40%;
+      background: radial-gradient(ellipse at top left, rgba(255, 255, 255, 0.4), transparent 70%);
+      border-radius: 50%;
+      filter: blur(6px);
+      pointer-events: none;
+      z-index: 0;
     }
 
     .card h2 {
       font-size: 1.4rem;
       margin-bottom: 1rem;
       color: rgba(0, 0, 0, 0.85);
+      position: relative;
+      z-index: 1;
     }
+
 
     .photos {
       display: grid;
@@ -173,23 +197,26 @@
   align-items: center;
 }
 
-.photos img {
-  width: 100%;
-  aspect-ratio: 2 / 3;
-  object-fit: cover;
-  display: block;
-  margin: auto;
-  border-radius: 12px;
-  transition: transform 0.3s ease, z-index 0.3s ease;
-  cursor: pointer;
-  z-index: 1;
-}
 
-.photos img.expanded {
-  transform: scale(2.2);
-  z-index: 9999;
-  position: relative;
-}
+
+    .photos img {
+      width: 100%;
+      max-width: 100px;
+      aspect-ratio: 2 / 3;
+      object-fit: cover;
+      display: block;
+      margin: auto;
+      border-radius: 12px;
+      transition: transform 0.3s ease, z-index 0.3s ease;
+      cursor: pointer;
+      z-index: 1;
+    }
+
+    .photos img.expanded {
+      transform: scale(2.2);
+      z-index: 9999;
+      position: relative;
+    }
 
 
     #about .about-text {
@@ -423,14 +450,10 @@
   }
 }
 
+
   </style>
 </head>
 <body>
-
-  <video autoplay muted loop playsinline id="background-video" poster="sky1.jpg">
-  <source src="clouds.mp4" type="video/mp4" />
-  Your browser does not support the video tag.
-</video>
 
 
   <nav class="glass-nav">
