Add dreamy sky-blue personal site with four pages

--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hey</title>
+  <title>Projects</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;600&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -16,8 +16,12 @@
   </nav>
   <div class="content">
     <div class="glass-card">
-      <h1>Hey</h1>
-      <p>Welcome to my dreamy, glassy corner of the web.</p>
+      <h1>Projects</h1>
+      <ul>
+        <li><a href="https://sindesi.ch" target="_blank">Sindesi</a></li>
+        <li><a href="https://beskou.com" target="_blank">Beskou</a></li>
+        <li><a href="https://stevejobs.ch" target="_blank">Steve Jobs Tribute</a></li>
+      </ul>
     </div>
   </div>
 </body>
