--- a/story.html
+++ b/story.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hey</title>
+  <title>Story</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;600&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -16,8 +16,8 @@
   </nav>
   <div class="content">
     <div class="glass-card">
-      <h1>Hey</h1>
-      <p>Welcome to my dreamy, glassy corner of the web.</p>
+      <h1>Story</h1>
+      <p>I am a traveler, dreamer, and builder. This site collects moments from my journey and projects that inspire me.</p>
     </div>
   </div>
 </body>
