--- a/world.html
+++ b/world.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hey</title>
+  <title>World</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;600&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -16,8 +16,16 @@
   </nav>
   <div class="content">
     <div class="glass-card">
-      <h1>Hey</h1>
-      <p>Welcome to my dreamy, glassy corner of the web.</p>
+      <h1>World</h1>
+      <p>Snapshots from my travels.</p>
+      <div class="gallery">
+        <img src="photos_iceland/Iceland_1.jpg" alt="Iceland" />
+        <img src="photos_germany/Germany_1.jpg" alt="Germany" />
+        <img src="photos_france/France_1.jpg" alt="France" />
+        <img src="photos_italy/Italy_1.jpg" alt="Italy" />
+        <img src="photos_canada/canada_1.jpg" alt="Canada" />
+        <img src="photos_usa/usa_1.jpg" alt="USA" />
+      </div>
     </div>
   </div>
 </body>
