--- a/index.html
+++ b/index.html
@@ -31,9 +31,8 @@
       font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, "Helvetica Neue", Arial, "Apple Color Emoji", "Segoe UI Emoji";
       color:var(--text);
       line-height:1.5;
-      background: url('sky1.jpg') center/cover fixed no-repeat; /* desktop/tablet default */
+      background: url('sky1.jpg') center/cover fixed no-repeat;
       min-height:100vh;
-      background-color:#0a0d12; /* fallback around image when using contain on mobile */
     }
     body::before{
       content:"";
@@ -82,14 +81,11 @@
     @keyframes bob{ 0%,100%{ transform:translateY(0);} 50%{ transform:translateY(8px);} }
 
     .slogan-wrap{ width:100%; display:flex; justify-content:center; align-items:center; }
-    .slogan-svg{ width:min(100%, 1400px); height:auto; display:block; filter: drop-shadow(0 6px 22px rgba(0,0,0,.22)); overflow:visible; }
+    .slogan-svg{ width:min(100%, 1400px); height:auto; display:block; filter: drop-shadow(0 6px 22px rgba(0,0,0,.22)); }
     .slogan-svg text{
       font: 800 clamp(72px, 14vw, 180px)/0.9 "Inter", system-ui, -apple-system, Segoe UI, Roboto, "Helvetica Neue", Arial;
       text-anchor: middle; dominant-baseline: central;
     }
-    /* default: show inline, hide stacked */
-    .slogan-svg.inline{ display:block; }
-    .slogan-svg.stacked{ display:none; }
 
     #world .glass.content, #projects .glass.content{
       border-radius:40px;
@@ -166,31 +162,29 @@
       background: linear-gradient(90deg, #fff, rgba(255,255,255,0.7));
       -webkit-background-clip: text;
               background-clip: text;
-      color: transparent;
+      color: transparent
     }
 
     /* Logo next to brand, sized to title height */
     #story .brand-wrap{
       display:inline-flex;
-      align-items:baseline;                 /* keeps logo on text baseline */
+      align-items:baseline;
       gap:8px;
     }
     #story .brand-wrap .mark{
-      height:1em;                           /* as tall as the title text */
+      height:1em;
       width:auto;
       vertical-align:baseline;
-      border-radius:4px;                    /* optional: soft corners for raster logos */
+      border-radius:4px;
       box-shadow: 0 0 0 1px rgba(255,255,255,0.15) inset;
     }
 
-    /* pretty divider inside cards */
     #story .divider{
       height:1px; margin:10px 0;
       background: linear-gradient(to right, rgba(255,255,255,0.22), rgba(255,255,255,0.08));
       border-radius:999px;
     }
 
-    /* FUTURE card with shimmer */
     #story .milestone.future{
       position:relative; overflow:hidden;
       background: linear-gradient(135deg, rgba(255,255,255,0.08), rgba(255,255,255,0.03));
@@ -213,28 +207,15 @@
       }
     }
 
-    /* ---------------- MOBILE TWEAKS ---------------- */
-    @media (max-width: 768px){
-      /* Fit background art without aggressive crop; avoid iOS issues with fixed */
-      body{
-        background-image: url('sky1.jpg');
-        background-size: contain;        /* keep full image visible */
-        background-repeat: no-repeat;
-        background-position: center top;
-        background-attachment: scroll;   /* smoother on mobile */
+    /* ---------------- Mobile-only stacked hero text (fits all 4 lines) ---------------- */
+    .slogan-svg--stacked { display:none; }
+    @media (max-width: 640px){
+      .slogan-svg--inline { display:none; }     /* hide desktop version on phones */
+      .slogan-svg--stacked { display:block; width:100%; max-width:520px; }
+      .slogan-svg--stacked text{
+        font: 800 clamp(56px, 19vw, 120px)/1 "Inter", system-ui, -apple-system, Segoe UI, Roboto, "Helvetica Neue", Arial;
+        text-anchor: middle; dominant-baseline: central;
       }
-      .hero{ min-height:100svh; }
-
-      /* Stack hero words vertically */
-      .slogan-svg.inline{ display:none; }
-      .slogan-svg.stacked{ display:block; width:min(100%, 1000px); }
-      .slogan-svg.stacked text{
-        font: 800 clamp(56px, 16vw, 120px)/1.05 "Inter", system-ui, -apple-system, Segoe UI, Roboto, "Helvetica Neue", Arial;
-      }
-      .slogan-wrap{ padding: 24px 0; }
-
-      /* Slightly tighter grids on small screens */
-      #world .grid, #projects .grid{ grid-template-columns: 1fr; }
     }
   </style>
 </head>
@@ -243,8 +224,8 @@
     <!-- Hero -->
     <section id="hey" class="hero scene">
       <div class="slogan-wrap">
-        <!-- Desktop/Tablet: inline headline -->
-        <svg class="slogan-svg inline" viewBox="0 0 1600 280" role="img" aria-label="THE TIME IS NOW">
+        <!-- Desktop / tablet inline version -->
+        <svg class="slogan-svg slogan-svg--inline" viewBox="0 0 1600 280" role="img" aria-label="THE TIME IS NOW">
           <defs>
             <filter id="outerStroke" filterUnits="userSpaceOnUse" x="-100" y="-100" width="1800" height="480">
               <feMorphology in="SourceAlpha" operator="dilate" radius="1.4" result="dilated"/>
@@ -273,10 +254,10 @@
           <text x="800" y="140" filter="url(#outerStroke)">THE TIME IS NOW</text>
         </svg>
 
-        <!-- Mobile: stacked headline (each word on its own line) -->
-        <svg class="slogan-svg stacked" viewBox="0 0 1600 800" role="img" aria-label="THE TIME IS NOW">
+        <!-- Mobile stacked version (starts higher + tighter spacing so 'NOW' is visible) -->
+        <svg class="slogan-svg slogan-svg--stacked" viewBox="0 0 800 720" role="img" aria-label="THE TIME IS NOW">
           <defs>
-            <filter id="outerStrokeStack" filterUnits="userSpaceOnUse" x="-100" y="-100" width="1800" height="1200">
+            <filter id="outerStrokeStack" filterUnits="userSpaceOnUse" x="-100" y="-100" width="1000" height="920">
               <feMorphology in="SourceAlpha" operator="dilate" radius="1.4" result="dilated"/>
               <feComposite in="dilated" in2="SourceAlpha" operator="out" result="ring"/>
               <feFlood flood-color="#ffffff" result="white"/>
@@ -290,31 +271,31 @@
               <stop offset="55%"  stop-color="#fff" stop-opacity="1"/>
               <stop offset="70%"  stop-color="#fff" stop-opacity="0.18"/>
               <stop offset="100%" stop-color="#fff" stop-opacity="0"/>
-              <animate attributeName="x1" values="-400; 1800" dur="6s" repeatCount="indefinite"/>
-              <animate attributeName="x2" values="0; 2200" dur="6s" repeatCount="indefinite"/>
+              <animate attributeName="x1" values="-400; 1200" dur="6s" repeatCount="indefinite"/>
+              <animate attributeName="x2" values="0; 1600" dur="6s" repeatCount="indefinite"/>
             </linearGradient>
             <filter id="glowBlurStack" x="-30%" y="-50%" width="160%" height="200%">
               <feGaussianBlur stdDeviation="30"/>
             </filter>
           </defs>
 
-          <text x="800" y="160" fill="url(#shimmerStack)" opacity="0.85" filter="url(#glowBlurStack)">
-            <tspan x="800" dy="0">THE</tspan>
-            <tspan x="800" dy="160">TIME</tspan>
-            <tspan x="800" dy="160">IS</tspan>
-            <tspan x="800" dy="160">NOW</tspan>
+          <text x="400" y="110" fill="url(#shimmerStack)" opacity="0.85" filter="url(#glowBlurStack)">
+            <tspan x="400" dy="0">THE</tspan>
+            <tspan x="400" dy="1.1em">TIME</tspan>
+            <tspan x="400" dy="1.1em">IS</tspan>
+            <tspan x="400" dy="1.1em">NOW</tspan>
           </text>
-          <text x="800" y="160" fill="#ffffff" fill-opacity="0.30">
-            <tspan x="800" dy="0">THE</tspan>
-            <tspan x="800" dy="160">TIME</tspan>
-            <tspan x="800" dy="160">IS</tspan>
-            <tspan x="800" dy="160">NOW</tspan>
+          <text x="400" y="110" fill="#ffffff" fill-opacity="0.30">
+            <tspan x="400" dy="0">THE</tspan>
+            <tspan x="400" dy="1.1em">TIME</tspan>
+            <tspan x="400" dy="1.1em">IS</tspan>
+            <tspan x="400" dy="1.1em">NOW</tspan>
           </text>
-          <text x="800" y="160" filter="url(#outerStrokeStack)">
-            <tspan x="800" dy="0">THE</tspan>
-            <tspan x="800" dy="160">TIME</tspan>
-            <tspan x="800" dy="160">IS</tspan>
-            <tspan x="800" dy="160">NOW</tspan>
+          <text x="400" y="110" filter="url(#outerStrokeStack)">
+            <tspan x="400" dy="0">THE</tspan>
+            <tspan x="400" dy="1.1em">TIME</tspan>
+            <tspan x="400" dy="1.1em">IS</tspan>
+            <tspan x="400" dy="1.1em">NOW</tspan>
           </text>
         </svg>
       </div>
